Implement point 5 and 6 of the assignment, thus completed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <button class="click-button" id="clean-button">Clear</button>
+    <button class="click-button" id="color-button">Random Color</button>
     <div class="grid-container">
     </div>
 </body>
