Inhibit drag behaviour of grid element. Simplify paintElement and computeColor code. Finish all comments.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./js/javascript.js" defer></script>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body draggable="false" ondragstart="return false;" ondrop="return false;">
     <button class="click-button" id="clean-button">Clear</button>
     <button class="click-button" id="color-button">Random Color</button>
     <div class="grid-container">
